adding carousel and edit some files for login page

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "StoreConectionString": "Data Source=.;Initial Catalog=StoreDB;User Id=Islam;Password=9103092;Trust Server Certificate=true"
+    "StoreConectionString": "Data Source=.;Initial Catalog=Store;User Id=Islam;Password=9103092;Trust Server Certificate=true"
   }
 }
